--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/bibimij/sendsay-popup-boilerplate",
   "dependencies": {
+    "autoprefixer": "^6.0.2",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-minify": "0.0.5",
+    "gulp-postcss": "^6.0.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1"
   }
