--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "autoprefixer": "^6.0.2",
     "del": "^2.0.2",
+    "ghooks": "^0.3.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.0.0",
@@ -32,5 +33,10 @@
     "gulp-postcss": "^6.0.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "echo \"$(git diff --stat --cached --color)\""
+    }
   }
 }
