--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-cssnano": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-postcss": "^6.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1"
   }
